# thesis_on_CRM_development

./: .gitignore  manage.py  package.json  pyproject.toml  webpack.config.js
Docs/: technical_task.md
dw_crm/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/application/: app.js  app2.js
frontend/src/styles/: index.css
frontend/webpack/: webpack.common.js
templates/: base.html
