[tool.poetry]
name = "dw-crm-system"
version = "0.1.0"
description = "this is crm system"
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
python-webpack-boilerplate = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
